# MartiDB

./: CMakeLists.txt  README.md
MartiDB/: CMakeLists.txt
MartiDB-cli/: CMakeLists.txt
MartiDB-cli/src/: main.cpp
MartiDB-tests/: CMakeLists.txt
MartiDB-tests/src/: create-database-test.cpp  database-managment-tests.cpp  key-value-test.cpp  key-value-tests.cpp  main.cpp  performance-tests.cpp
MartiDB/inc/: Database.h  MartiDB.h
MartiDB/inc/extensions/: database_ext.h
MartiDB/src/: Database.cpp  MartiDB.cpp
